# Bamboo

./: README.md
Engine/Component/: Component.h  Transfrom.h
Engine/Core/: Log.h  Node.cpp  Node.h  Time.cpp  Time.h  UUID.cpp
Engine/ECS/: Entity.h
Engine/ECS/Component/: TransformComponent.h
Engine/ECS/System/: TransformSystem.h
Engine/Game/: Application.cpp  Application.h  Game.cpp  Game.h  Window.cpp  Window.h
Engine/Graphics/: Graphics.h  GraphicsContext.cpp
Engine/GraphicsAPI/OpenGL/: OpenGLContext.cpp  OpenGLContext.h
Engine/Input/: Input.h
Engine/Math/: Color.cpp  Math.h  MathDefs.h  Matrix3.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Rect.cpp  Rect.h  Vector2.h  Vector3.cpp  Vector4.h
Engine/Platform/: Platform.h
Engine/Platform/Windows/: PlatformWindows.h  WindowsWindow.cpp  WindowsWindow.h
Engine/Scene/: Scene.h
Engine/UI/: Button.h
Source/: CMakeLists.txt  生成工程命令.txt
Source/Bamboo/: Bamboo.h  CMakeLists.txt  Config.in.h  generate_cmake.py
Source/Bamboo/Assets/: Asset.h  AssetFactory.cpp  AssetFactory.h  AssetManager.cpp  AssetManager.h  ImageAsset.cpp  ImageAsset.h
Source/Bamboo/Core/: Assert.h  Base.h  Input.h  KeyCodes.h  Log.cpp  Log.h  Ref.h  Singleton.h  Time.cpp  Time.h  UUID.h
Source/Bamboo/ECS/: Entity.cpp  Entity.h
Source/Bamboo/ECS/Component/: BoxCollider2DComponent.h  CameraComponent.h  Component.h  IDComponent.h  QuadComponent.h  RigidbodyComponent.h  SpriteRendererComponent.h  TagComponent.h  TransformComponent.h  TriangleComponent.h
Source/Bamboo/ECS/System/: ISystem.h  RendererSystem.cpp  RendererSystem.h  SpriteRendererSystem.cpp  SpriteRendererSystem.h  TransformSystem.cpp  TransformSystem.h
Source/Bamboo/Event/: ApplicationEvent.h  Event.h  KeyEvent.h
Source/Bamboo/Game/: Application.cpp  Application.h  Window.cpp  Window.h
Source/Bamboo/Graphics/: BRenderer2D.cpp  BRenderer2D.h  Camera.cpp  Camera.h  GraphicsContext.cpp  GraphicsContext.h  RenderBuffer.cpp  RenderBuffer.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer2d.cpp  Renderer2d.h  RendererAPI.cpp  RendererAPI.h  RendererCommand.cpp  RendererCommand.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Source/Bamboo/GraphicsAPI/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLTexture2d.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertextArray.cpp  OpenGLVertextArray.h
Source/Bamboo/Input/: Input.cpp  Input.h
Source/Bamboo/Math/: AABB.cpp  AABB.h  Color.h  IntVector2.cpp  IntVector2.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Quaternion.h  Random.cpp  Random.h  Rect.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.h
Source/Bamboo/Physics/: PhysicsDefine.h  PhysicsSystem.h
Source/Bamboo/Platform/: Platform.h
Source/Bamboo/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
Source/Bamboo/Scene/: Camera.cpp  Camera.h  Octree.h  Scene.cpp  Scene.h  SceneCamera.h  SceneManager.cpp  SceneManager.h  SceneSerializer.cpp  SceneSerializer.h
Source/Bamboo/UI/: Button.cpp  Button.h  Text.h  UIElement.cpp  UIElement.h
Source/BambooAssets/Shaders/: sprite.frag  sprite.vert  triangle.frag  triangle.vert
Source/Editor/: CMakeLists.txt
Source/Editor/Source/: main.cpp
Source/Editor/Source/Core/: Application.cpp  Application.h
Source/Sandbox/: CMakeLists.txt  main.cpp
Source/Sandbox/BreakoutDemo/: BreakoutApp.cpp  BreakoutApp.h  BreakoutDefine.h
Source/Sandbox/BreakoutDemo/Component/: BrickComponent.h
Source/Sandbox/BreakoutDemo/Entity/: BallComponent.h  BallSystem.cpp  BallSystem.h  BrickComponent.h  PaddleSystem.cpp  PaddleSystem.h
Source/Sandbox/BreakoutDemo/System/: BallSystem.cpp  BallSystem.h
